--- a/src/app/components/bike-repair-form/bike-repair-form.component.html
+++ b/src/app/components/bike-repair-form/bike-repair-form.component.html
@@ -1,4 +1,4 @@
- 
+<!--  
 <div class="form-wrapper">
     <h2 class="form-title">Bike Repair Form</h2>
     <form class="repair-form" action="submit" [formGroup]="form">
@@ -17,4 +17,4 @@
         <button mat-raised-button color="primary" (click)="onSubmit()">Submit</button>
     </form>
     <app-loader *ngIf="isLoading| async"></app-loader>
-</div>
+</div> -->
