--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,15 +13,22 @@
 <footer>
     <div class="footer-wrapper"> 
         <app-cyclix-logo></app-cyclix-logo>
-        <div class="footer-links">
+        <div class="footer-links footer-terms">
             <span>{{'termsOfUse' | translate}}</span>
             <span>{{'dataProtection' | translate}}</span>
             <span>{{'imprint' | translate}}</span>
         </div>
+        <div class="footer-links footer-follow">
+            <span>FOLLOW CYCLIX</span>
+        </div>
+        <div class=" media-links">
+            <fa-icon [icon]="['fab', 'facebook']"></fa-icon>
+            <fa-icon [icon]="['fab', 'instagram']"></fa-icon>
+            <fa-icon [icon]="['fab', 'linkedin']"></fa-icon>
+        </div>
         <div class="btn-group"> 
             <a class=" link-btn " (click)="useLanguage('de')">  DE  </a>
             <a class="link-btn" (click)="useLanguage('en')"> EN </a>
-          </div>
-        
+          </div> 
     </div> 
 </footer>
