--- a/src/app/components/bike-repair-form/bike-repair-form.component.scss
+++ b/src/app/components/bike-repair-form/bike-repair-form.component.scss
@@ -1,6 +1,11 @@
+h2 {
+font-family: "CeraProMedium";
+}
+
 .repair-form {
     display: flex;
     flex-direction: column;
+    width: 30rem;
 }
 app-loader {
     position: absolute;
@@ -10,16 +15,25 @@ app-loader {
     width: 100%;
     height: 100vh;
   }
-.form-wrapper {
+  
+.main-wrapper {
     margin-left: auto;
     margin-right: auto;
-    margin-top: 25vh;
-    width: 30rem;
+    margin-top: 15vh;
+    
+}
+
+.form-wrapper {
+    display: flex;
+    justify-content: center;
 }
 
 .form-title {
     text-align: center;
-    color: orange;
+    color: #FF5E3A;
+    font-size: 3.75rem;
+    font-family: "CeraProLight";
+    height: 70px;
 }
 
 @media only screen and (max-width: 600px) {
