--- a/src/app/components/bike-repair-form/bike-repair-form.component.scss
+++ b/src/app/components/bike-repair-form/bike-repair-form.component.scss
@@ -1,5 +1,5 @@
 h2 {
-font-family: "CeraProMedium";
+    font-family: "CeraProMedium";
 }
 
 .repair-form {
@@ -7,6 +7,7 @@ font-family: "CeraProMedium";
     flex-direction: column;
     width: 30rem;
 }
+
 app-loader {
     position: absolute;
     /* width: 100%; */
@@ -14,13 +15,13 @@ app-loader {
     left: 0;
     width: 100%;
     height: 100vh;
-  }
-  
+}
+
 .main-wrapper {
     margin-left: auto;
     margin-right: auto;
     margin-top: 15vh;
-    
+
 }
 
 .form-wrapper {
@@ -36,8 +37,98 @@ app-loader {
     height: 70px;
 }
 
+::ng-deep.mat-vertical-content {
+    padding: 0 24px 24px 24px;
+    min-width: 60rem;
+}
+
+::ng-deep.mat-step-header {
+    display: none !important;
+}
+
+::ng-deep.mat-stepper-vertical-line::before {
+    display: none;
+}
+
+::ng-deep.mat-vertical-content {
+    form {
+        background-color: #F6F4F3;
+        border-radius: 15px;
+        padding: 3rem 4rem;
+        margin-bottom: 4rem;
+
+        h2 {
+            display: flex;
+            justify-content: flex-start;
+            align-items: center;
+            color: #FF5E3A;
+            font-size: 30px;
+
+            .dx-icon-help {
+                font-size: 30px;
+                margin-left: 1rem;
+            }
+        }
+    }
+}
+
+::ng-deep.mat-stepper-next {
+    border: none;
+    background-color: transparent;
+  }
+
+.mendatory-fields-message {
+    font-family: "CeraProMedium";
+    font-size: 12px;
+}
+
+.btn-wrapper {
+    display: flex;
+    justify-content: center;
+}
+
+.form-flex {
+    display: flex;
+    justify-content: space-around;
+
+    p {
+        color: #FF5E3A;
+        font-size: 1.25rem;
+    }
+}
+.form-grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 3rem;
+}
+.dx-textarea { 
+    height: 13.8rem;
+    margin: 3rem 0; 
+}
+h3 {
+    color: #FF5E3A;
+}
+.icon-illu {
+    width: 111px;
+    height: 84px;
+    background-color: #D9D9D9;
+    border-radius: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 2rem 3rem;
+    margin: 3rem 3rem;
+    padding: 4rem 6rem;
+}
+.radio-flex {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 3rem;
+}
 @media only screen and (max-width: 600px) {
-    .form-wrapper { 
+    .form-wrapper {
         width: 100%;
     }
-  }
+}
+
+ 
